Update to spring boot 3 and vaadin 24