@@ -44,43 +44,11 @@
 			<groupId>com.querydsl</groupId>
 			<artifactId>querydsl-jpa</artifactId>
 			<classifier>jakarta</classifier>
-			<version>5.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.querydsl</groupId>
 			<artifactId>querydsl-apt</artifactId>
 			<classifier>jakarta</classifier>
-			<version>5.0.0</version>
 		</dependency>
 	</dependencies>
-	<build>
-<!--		<resources>-->
-<!--			<resource>-->
-<!--				<directory>src/main/resources</directory>-->
-<!--				<filtering>true</filtering>-->
-<!--			</resource>-->
-<!--		</resources>-->
-		<plugins>
-<!--			<plugin>-->
-<!--				<groupId>org.apache.maven.plugins</groupId>-->
-<!--				<artifactId>maven-compiler-plugin</artifactId>-->
-<!--				<version>3.3</version>-->
-<!--				<configuration>-->
-<!--					<source>11</source>-->
-<!--					<target>11</target>-->
-<!--				</configuration>-->
-<!--			</plugin>-->
-<!--			<plugin>-->
-<!--				<groupId>org.apache.maven.plugins</groupId>-->
-<!--				<artifactId>maven-surefire-plugin</artifactId>-->
-<!--				<version>2.19.1</version>-->
-<!--				<configuration>-->
-<!--					<argLine>-Xmx2048m -XX:MaxPermSize=512m ${argLine}</argLine>-->
-<!--					<systemPropertyVariables>-->
-<!--						<missing.store.sales.warnings>true</missing.store.sales.warnings>-->
-<!--					</systemPropertyVariables>-->
-<!--				</configuration>-->
-<!--			</plugin>-->
-		</plugins>
-	</build>
 </project>
